--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,22 @@
     display: none;
   }
 
+#login-form {
+    text-align: center;
+}
+#login-form input {
+    border: 0;
+    background-color: rgba(0, 0, 0, 0);
+    color: white;
+    font-size: 30px;
+    outline: none;
+    text-align: center;
+}
+
+#login-form input::placeholder {
+    color: white;
+}
+
 #clock {
     margin-top: 200px;
     margin-bottom: 0px;
@@ -38,6 +54,7 @@
 #todo-form input::placeholder {
     color: white;
 }
+
 #todo-list {
     margin-top: 30px;
     text-align: center;
